# gold-wirewatch

./: .coverage  .env.example  .gitignore  BASELINE_UPGRADES.md  CONFIG.md  Dockerfile  OPENCLAW_CRON_COMMANDS.md  README.md  RUNBOOK.md  SOURCE_POLICY.md  SQLITE_SCHEMA_AND_MIGRATIONS.md  THREAT_MODEL.md  TROUBLESHOOTING.md  USER_SETUP_CHECKLIST.md  docker-compose.yml  keywords.yaml  pyproject.toml  run-wirewatch-hidden.ps1  run-wirewatch.cmd  sources.yaml  thresholds.yaml  wirewatch.py
config/: feeds.json
cron/: CRON_SETUP.md
docs/: CATALYST_LANE_SPRINT.md  DEDUPE_ARCHITECTURE.md  OPERATOR_TUNING.md  TEST_COVERAGE_CONFIDENCE.md
docs/sprints/: SPRINT-08-GEO-EVENT-COVERAGE.md
scripts/: check_candidate_feeds.py  check_feeds.py  tasks.py
skills/gold_wire/: SKILL.md
skills/wire/: SKILL.md
src/gold_wirewatch/: alert_payload.py  alerts.py  cli.py  config.py  confirmers.py  critical_bypass.py  dedupe.py  evidence_gate.py  feeds.py  models.py  openclaw_client.py  scheduler.py  scoring.py  service.py  source_tier.py  (+2 more)
tests/: test_alert_format.py  test_alert_payload.py  test_catalyst_lane.py  test_config_and_loading.py  test_confirmers.py  test_dedupe.py  test_evidence_gate.py  test_feeds.py  test_freshness_policy.py  test_live_providers.py  test_news_routing_fix.py  test_news_time_provenance.py  test_openclaw_client.py  test_pipeline_contracts.py  test_retries_and_branches.py  test_scheduler.py  test_scoring.py  test_service_and_cli.py  test_service_branches.py  test_service_webapp.py  test_source_tier.py  test_storage.py  test_suppression.py  test_webhook_trigger.py
(+2 files in other folders)
